[GStreamer] SleepDisabler not destroyed when video playback stops https://bugs.webkit.org/show_bug.cgi?id=219353

Patch by Philippe Normand <pnormand@igalia.com> on 2021-06-27
Reviewed by Eric Carlson.

Source/WebCore:

In GStreamer ports the SleepDisabler remained active after EOS because
HTMLMediaElement::updateSleepDisabling() was not being triggered. An explicit clean-up upon
the ended event in the media element is better than any other implicit action.

Test: media/video-ended-does-not-hold-sleep-assertion.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::dispatchEvent):

LayoutTests:

* media/video-ended-does-not-hold-sleep-assertion-expected.txt: Added.
* media/video-ended-does-not-hold-sleep-assertion.html: Added.

Canonical link: https://commits.webkit.org/239189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279313 268f45cc-cd09-0410-ab3c-d52691b4dbfc